--- a/mkdocs-dev.yml
+++ b/mkdocs-dev.yml
@@ -90,6 +90,7 @@ markdown_extensions:
   - pymdownx.critic
   - pymdownx.magiclink
   - pymdownx.tabbed
+  - pymdownx.inlinehilite
   - pymdownx.tasklist:
       custom_checkbox: true
   - attr_list
