--- a/mkdocs-dev.yml
+++ b/mkdocs-dev.yml
@@ -91,6 +91,7 @@ markdown_extensions:
   - pymdownx.magiclink
   - pymdownx.tabbed
   - pymdownx.inlinehilite
+  - pymdownx.keys
   - pymdownx.tasklist:
       custom_checkbox: true
   - attr_list
