--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ markdown_extensions:
   - pymdownx.critic
   - pymdownx.magiclink
   - pymdownx.tabbed
+  - pymdownx.keys
   - pymdownx.tasklist:
       custom_checkbox: true
   - attr_list
