full syntax highlighting support

--- a/mkdocs-dev.yml
+++ b/mkdocs-dev.yml
@@ -90,7 +90,9 @@ markdown_extensions:
   - pymdownx.critic
   - pymdownx.magiclink
   - pymdownx.tabbed
+  - pymdownx.highlight
   - pymdownx.inlinehilite
+  - pymdownx.superfences
   - pymdownx.keys
   - pymdownx.tasklist:
       custom_checkbox: true
