--- a/mkdocs-dev.yml
+++ b/mkdocs-dev.yml
@@ -19,6 +19,8 @@ plugins:
 theme:
   name: material
   custom_dir: overrides
+  features:
+    - navigation.instant
   language: ar
   font: false
   logo: https://cdn.xn--mgbg4a8cpdl.com/logo.png
@@ -29,6 +31,7 @@ theme:
     scheme: slate
     primary: deep purple
     accent: indigo
+
 extra:
   social:
     - icon: fontawesome/brands/github
